# graph-coloring

./: .gitignore  CMakeLists.txt  LEVELS.md  README.md  build-windows.sh
assets/levels/: level-list.xml
assets/levels/connectedness/: 3x3.xml  connect.xml  connectedness.xml  multiple-components.xml  negative-points.xml
assets/levels/edge-coloring/: coloring-edges.xml  create-edges.xml  create-graph.xml  edge-rules.xml  three-of-each.xml
assets/levels/editor/: graph-editor.xml
assets/levels/eulerian/: add-edges-cycle.xml  add-edges-path.xml  cycles.xml  double-add-one.xml  paths.xml
assets/levels/intro/: degrees.xml  edges.xml  vertices.xml
assets/levels/vertex-coloring/: colors.xml  max-edges.xml  maximum.xml  more-rules.xml  vertex-coloring.xml
src/: main.cpp
src/graphcoloring/: graphcoloring.cpp  graphcoloring.hpp  level.cpp  level.hpp  levelselect.cpp  levelselect.hpp  mainmenu.cpp  mainmenu.hpp
src/graphcoloring/graphs/: colormenu.cpp  colormenu.hpp  edge.cpp  edge.hpp  graph.cpp  graph.hpp  vertex.cpp  vertex.hpp
src/graphcoloring/levels/: colorloader.cpp  colorloader.hpp  globalloader.cpp  globalloader.hpp  graphloader.cpp  graphloader.hpp  value.cpp  (+5 more)
src/gui/: button.cpp  button.hpp  colors.cpp  colors.hpp  gui.hpp  menu.cpp  menu.hpp  position.cpp  position.hpp  window.hpp  window_events.cpp  window_events_keyboard.cpp  window_events_keyboard.hpp  window_events_mouse.cpp  window_events_mouse.hpp  window_main.cpp  window_rendering.cpp
src/utils/: errors.cpp  errors.hpp  filesystem.cpp  filesystem.hpp  geometry.cpp  geometry.hpp  windows.hpp
(+11 files in other folders)
